@@ -1,15 +1,7 @@
 package cn.tuyucheng.taketoday.streams.parallel;
 
 import org.apache.commons.io.FileUtils;
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Level;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
-import org.openjdk.jmh.annotations.Scope;
-import org.openjdk.jmh.annotations.Setup;
-import org.openjdk.jmh.annotations.State;
-import org.openjdk.jmh.annotations.TearDown;
+import org.openjdk.jmh.annotations.*;
 
 import java.io.File;
 import java.io.IOException;
@@ -17,7 +9,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 @State(Scope.Benchmark)
 public class FileSearchCost {
@@ -45,7 +36,7 @@ public class FileSearchCost {
    @OutputTimeUnit(TimeUnit.NANOSECONDS)
    public static void textFileSearchSequential() throws IOException {
       Files.walk(Paths.get("src/main/resources/")).map(Path::normalize).filter(Files::isRegularFile)
-            .filter(path -> path.getFileName().toString().endsWith(".txt")).collect(Collectors.toList());
+            .filter(path -> path.getFileName().toString().endsWith(".txt")).toList();
    }
 
    @Benchmark
@@ -53,8 +44,6 @@ public class FileSearchCost {
    @OutputTimeUnit(TimeUnit.NANOSECONDS)
    public static void textFileSearchParallel() throws IOException {
       Files.walk(Paths.get("src/main/resources/")).parallel().map(Path::normalize).filter(Files::isRegularFile)
-            .filter(path -> path.getFileName().toString().endsWith(".txt")).collect(Collectors.toList());
+            .filter(path -> path.getFileName().toString().endsWith(".txt")).toList();
    }
-
 }
-
